refactor: use modern node esm

--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.0.1",
   "description": "sunicoin.org",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "babel-node ./src/service/index.js",
-    "start:2": "PORT=3001 P2P_PORT=6001 PORTS=ws:localhost:6000 babel-node ./src/service/index.js",
-    "start:3": "PORT=3002 P2P_PORT=6002 PORTS=ws:localhost:6000 babel-node ./src/service/index.js",
-    "start:4": "PORT=3003 P2P_PORT=6003 PORTS=ws:localhost:6000 babel-node ./src/service/index.js",
-    "start:ex": "babel-node ./ejemplo_mine.js",
-    "nodemon": "nodemon --exec npm start",
+    "start": "node ./src/service/index.js",
+    "start:2": "PORT=3001 P2P_PORT=6001 PORTS=ws:localhost:6000 node ./src/service/index.js",
+    "start:3": "PORT=3002 P2P_PORT=6002 PORTS=ws:localhost:6000 node ./src/service/index.js",
+    "start:4": "PORT=3003 P2P_PORT=6003 PORTS=ws:localhost:6000 node ./src/service/index.js",
+    "start:ex": "node ./ejemplo_mine.js",
+    "nodemon": "nodemon ./src/service/index.js",
     "eslint": "eslint index.js src",
     "test": "jest",
-    "test:watch": "jest --watchAll",
-    "build": "babel -d ./build ./server -s",
-    "start-prod": "node ./build/index.js"
+    "test:watch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -27,9 +26,6 @@
   },
   "homepage": "https://github.com/ockang/sunicoin#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
