--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:4": "PORT=3003 P2P_PORT=6003 PORTS=ws:localhost:6000 node ./src/service/index.js",
     "start:ex": "node ./ejemplo_mine.js",
     "nodemon": "nodemon ./src/service/index.js",
+    "front": "next dev -p 3000",
     "eslint": "eslint index.js src",
     "test": "jest",
     "test:watch": "jest --watchAll"
@@ -38,7 +39,10 @@
     "elliptic": "^6.5.2",
     "express": "^4.17.1",
     "uuid": "^7.0.2",
-    "ws": "^7.2.1"
+    "ws": "^7.2.1",
+    "next": "13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "jest": {
     "silent": false,
