--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "@babel/preset-env": "^7.8.6"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
