--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "ws": "^7.2.1",
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "jest": {
     "silent": false,
