--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "bip39": "^3.0.4",
+    "bip32": "^5.2.0"
   },
   "jest": {
     "silent": false,
