--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "lucide-react": "^0.321.0",
+    "react-tooltip": "^5.11.0",
     "bip39": "^3.0.4",
     "bip32": "^2.0.6"
   },
