--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-icons": "^4.10.1",
     "lucide-react": "^0.321.0",
     "react-tooltip": "^5.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "bip39": "^3.0.4",
     "bip32": "^2.0.6"
   },
