--- a/package.json
+++ b/package.json
@@ -66,7 +66,11 @@
     "mongodb": "^5.7.0",
     "mysql2": "^3.2.0",
     "pg": "^8.10.0",
-    "firebase-admin": "^11.10.0"
+    "firebase-admin": "^11.10.0",
+    "@monaco-editor/react": "^4.4.6",
+    "monaco-editor": "^0.43.0",
+    "react-json-view": "^1.21.3",
+    "ajv": "^8.12.0"
   },
   "jest": {
     "silent": false,
